--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,13 @@
 !.config/terminator/
 !.config/terminator/config
 !setup
+!.tmux.conf
+!.tmux.conf.local
 !.vimrc
 !.vimrc.local
 !.vimrc.local.bundles
-!.zshrc
 !.vim/UltiSnips/
+!.zshrc
 !.zsh_custom/
 !.zsh_custom/themes/
 !.zsh_custom/themes/custom.zsh-theme
