--- a/.gitconfig
+++ b/.gitconfig
@@ -2,6 +2,9 @@
 	name = Elton Souza
 	email = elton.souza@gmail.com
 
+[url "git@github.com:"]
+    insteadOf = https://github.com/
+
 [core]
 	editor = vim
-    	excludesfile = ~/.gitignore_global
+    excludesfile = ~/.gitignore_global
